update messaged when throwing QuestionReadException